fix: add missing fields in API Definition Key and Trust Store
see: https://gravitee.atlassian.net/browse/GKO-831

fix: add missing fields in API Definition Key and Trust Store

see: https://gravitee.atlassian.net/browse/GKO-831
(cherry picked from commit 4468e3d21a7bafb5dfdf36f5c6a495682f2b97d5)
