# api/model/api/base/zz_generated.deepcopy.go
@@ -187,12 +187,12 @@ func (in *HttpClientSslOptions) DeepCopyInto(out *HttpClientSslOptions) {
 	if in.TrustStore != nil {
 		in, out := &in.TrustStore, &out.TrustStore
 		*out = new(TrustStore)
-		**out = **in
+		(*in).DeepCopyInto(*out)
 	}
 	if in.KeyStore != nil {
 		in, out := &in.KeyStore, &out.KeyStore
 		*out = new(KeyStore)
-		**out = **in
+		(*in).DeepCopyInto(*out)
 	}
 }
 
@@ -237,38 +237,43 @@ func (in *HttpProxy) DeepCopy() *HttpProxy {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *JKSKeyStore) DeepCopyInto(out *JKSKeyStore) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new JKSKeyStore.
-func (in *JKSKeyStore) DeepCopy() *JKSKeyStore {
-	if in == nil {
-		return nil
-	}
-	out := new(JKSKeyStore)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *JKSTrustStore) DeepCopyInto(out *JKSTrustStore) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new JKSTrustStore.
-func (in *JKSTrustStore) DeepCopy() *JKSTrustStore {
-	if in == nil {
-		return nil
-	}
-	out := new(JKSTrustStore)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *KeyStore) DeepCopyInto(out *KeyStore) {
 	*out = *in
+	if in.Path != nil {
+		in, out := &in.Path, &out.Path
+		*out = new(string)
+		**out = **in
+	}
+	if in.Content != nil {
+		in, out := &in.Content, &out.Content
+		*out = new(string)
+		**out = **in
+	}
+	if in.Password != nil {
+		in, out := &in.Password, &out.Password
+		*out = new(string)
+		**out = **in
+	}
+	if in.KeyPath != nil {
+		in, out := &in.KeyPath, &out.KeyPath
+		*out = new(string)
+		**out = **in
+	}
+	if in.KeyContent != nil {
+		in, out := &in.KeyContent, &out.KeyContent
+		*out = new(string)
+		**out = **in
+	}
+	if in.CertPath != nil {
+		in, out := &in.CertPath, &out.CertPath
+		*out = new(string)
+		**out = **in
+	}
+	if in.CertContent != nil {
+		in, out := &in.CertContent, &out.CertContent
+		*out = new(string)
+		**out = **in
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new KeyStore.
@@ -307,66 +312,6 @@ func (in *MetadataEntry) DeepCopy() *MetadataEntry {
 		return nil
 	}
 	out := new(MetadataEntry)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *PEMKeyStore) DeepCopyInto(out *PEMKeyStore) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new PEMKeyStore.
-func (in *PEMKeyStore) DeepCopy() *PEMKeyStore {
-	if in == nil {
-		return nil
-	}
-	out := new(PEMKeyStore)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *PEMTrustStore) DeepCopyInto(out *PEMTrustStore) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new PEMTrustStore.
-func (in *PEMTrustStore) DeepCopy() *PEMTrustStore {
-	if in == nil {
-		return nil
-	}
-	out := new(PEMTrustStore)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *PKCS12KeyStore) DeepCopyInto(out *PKCS12KeyStore) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new PKCS12KeyStore.
-func (in *PKCS12KeyStore) DeepCopy() *PKCS12KeyStore {
-	if in == nil {
-		return nil
-	}
-	out := new(PKCS12KeyStore)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *PKCS12TrustStore) DeepCopyInto(out *PKCS12TrustStore) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new PKCS12TrustStore.
-func (in *PKCS12TrustStore) DeepCopy() *PKCS12TrustStore {
-	if in == nil {
-		return nil
-	}
-	out := new(PKCS12TrustStore)
 	in.DeepCopyInto(out)
 	return out
 }
@@ -600,6 +545,21 @@ func (in *ResponseTemplate) DeepCopy() *ResponseTemplate {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *TrustStore) DeepCopyInto(out *TrustStore) {
 	*out = *in
+	if in.Path != nil {
+		in, out := &in.Path, &out.Path
+		*out = new(string)
+		**out = **in
+	}
+	if in.Content != nil {
+		in, out := &in.Content, &out.Content
+		*out = new(string)
+		**out = **in
+	}
+	if in.Password != nil {
+		in, out := &in.Password, &out.Password
+		*out = new(string)
+		**out = **in
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new TrustStore.
